src/3_Docker/iptables-save
# Generated by iptables-save v1.6.0
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ACCEPT_LOG - [0:0]
:DROP_LOG - [0:0]
:REJECT_LOG - [0:0]
-A INPUT -j ACCEPT_LOG
-A FORWARD -j ACCEPT_LOG
-A OUTPUT -j ACCEPT_LOG
-A ACCEPT_LOG -j NFLOG --nflog-prefix  "ACCEPTED " --nflog-group 1
-A ACCEPT_LOG -j ACCEPT
-A DROP_LOG -j NFLOG --nflog-prefix  "DROPPED " --nflog-group 2
-A DROP_LOG -j DROP
-A REJECT_LOG -j NFLOG --nflog-prefix  "REJECTED " --nflog-group 2
-A REJECT_LOG -j REJECT --reject-with icmp-port-unreachable
COMMIT
